# cpbl_takao_today_BE

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  bulk_import.py  docker-compose.yml  entrypoint.sh  fly.toml  init_database.py  pyproject.toml  readme.md  requirements.txt  reset_db.py  run_scraper.py  run_task_locally.py
.github/workflows/: canary_test.yml  ci.yml  daily_crawl.yml  e2e_workflow_health_check.yml  fly-deploy.yml  health_check.yml  schedule_worker.yml
alembic/: env.py
alembic/versions/: 465fac3fc553_add_player_career_stats_table.py  6988c26c5d7e_add_playerfieldingstatsdb_table.py  8ca6f5022ea6_add_is_score_from_description_and_.py  a41a40513d45_initial_migration.py  f876d5635457_denormalize_game_id_into_at_bat_details.py
app/: broker_setup.py  browser.py  cache.py  config.py  db.py  db_actions.py  exceptions.py  logging_config.py  main.py  middleware.py  models.py  scheduler.py  schemas.py  scraper.py  tasks.py  workers.py
app/api/: analysis.py  dashboard.py  dependencies.py  games.py  jobs.py  players.py  system.py  tasks.py
app/core/: constants.py  fetcher.py  parser.py  schedule_scraper.py
app/crud/: analysis.py  games.py  players.py
docs/: api_integration_guide.md
scripts/: bulk_import.py  create_canary_sample.py  generate_readme.py  locustfile.py  reset_db.py
tests/: conftest.py  factories.py  test_cache.py  test_canary.py  test_db_actions.py  test_game_data.py  test_main.py  test_run_scraper.py  test_scheduler.py  test_scraper.py  test_tasks.py  test_workers.py
(+51 files in other folders)
